--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-tsrouter-app" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Telemedicine Platform</title>
+    <title>MedCare</title>
   </head>
   <body>
     <div id="app"></div>
